--- a/ELMO.ipynb
+++ b/ELMO.ipynb
@@ -79,7 +79,8 @@
     "editable": false,
     "run_control": {
      "frozen": true
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -296,6 +297,7 @@
    },
    "outputs": [],
    "source": [
+    "# 计算好emb\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    emb_tokens = sess.run(emb_opt_tokens['elmo'])\n",
@@ -304,66 +306,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 167,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-06T07:00:40.060248Z",
-     "start_time": "2019-06-06T07:00:40.025350Z"
+     "end_time": "2019-06-10T02:16:50.454136Z",
+     "start_time": "2019-06-10T02:16:50.438742Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'the cat is on the mat'"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['the', 'cat', 'is', 'on', 'the', 'mat']"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "elmo的一致性： True\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'dogs are in the fog'"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['dogs', 'are', 'in', 'the', 'fog', '']"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "elmo的一致性： False\n"
+      "sentences:  ['the cat is on the mat', 'dogs are in the fog']\n",
+      "\n",
+      ">>> 使用tokens_list:  ['the', 'cat', 'is', 'on', 'the', 'mat']\n",
+      "两种输入方式下 elmo 的一致性： True\n",
+      "\n",
+      ">>> 使用tokens_list:  ['dogs', 'are', 'in', 'the', 'fog', '']\n",
+      "两种输入方式下 elmo 的一致性： False\n",
+      "不一致时，tokens和sentence两种方式的tensor值示例：\n"
      ]
     },
     {
@@ -383,7 +345,7 @@
        "         1.2616637e-01, -2.6158541e-02,  3.9751023e-01]], dtype=float32)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -404,18 +366,19 @@
        "         2.5831670e-02, -1.4298330e-02, -1.6504213e-02]], dtype=float32)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"sentences: \", sentences)\n",
     "for sen_idx in [0,1]:\n",
-    "    sentences[sen_idx]\n",
-    "    tokens_list[sen_idx]\n",
+    "    print(\"\\n>>> 使用tokens_list: \", tokens_list[sen_idx])\n",
     "    consistent = np.all(emb_tokens[sen_idx] == emb_sentence[sen_idx])\n",
-    "    print(\"elmo的一致性：\",consistent)\n",
+    "    print(\"两种输入方式下 elmo 的一致性：\",consistent)\n",
     "    if not consistent:\n",
+    "        print(\"不一致时，tokens和sentence两种方式的tensor值示例：\")\n",
     "        emb_tokens[sen_idx]\n",
     "        emb_sentence[sen_idx]"
    ]
@@ -458,6 +421,42 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "position": {
+    "height": "291px",
+    "left": "1299px",
+    "right": "20px",
+    "top": "10px",
+    "width": "319px"
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
