--- a/TagExtraction.ipynb
+++ b/TagExtraction.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-10T08:54:53.200258Z",
-     "start_time": "2019-06-10T08:54:53.193934Z"
+     "end_time": "2019-06-11T02:41:52.131619Z",
+     "start_time": "2019-06-11T02:41:51.864888Z"
     }
    },
    "outputs": [],
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-10T09:26:49.760516Z",
-     "start_time": "2019-06-10T09:26:49.756249Z"
+     "end_time": "2019-06-11T02:41:52.587195Z",
+     "start_time": "2019-06-11T02:41:52.314905Z"
     }
    },
    "outputs": [],
@@ -40,12 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-10T08:54:57.286479Z",
-     "start_time": "2019-06-10T08:54:54.314128Z"
-    }
+     "end_time": "2019-06-11T02:41:55.741951Z",
+     "start_time": "2019-06-11T02:41:52.751404Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -53,7 +54,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0610 16:54:55.678285 139927025489728 __init__.py:56] Some hub symbols are not available because TensorFlow version is less than 1.14\n"
+      "W0611 10:41:54.100164 140223109015360 __init__.py:56] Some hub symbols are not available because TensorFlow version is less than 1.14\n"
      ]
     }
    ],
@@ -65,76 +66,225 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-11T02:41:56.445910Z",
+     "start_time": "2019-06-11T02:41:56.441992Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "article = \"\"\"Get News Updates directly on your WhatsApp. Click here to Subscribe.\\n\\nRanveer Singh and Deepika Padukone have been giving us major couple goals. And today, Deepika took to her Instagram to share her look for an award night.\\n\\n\\n\\n\\n\\nShe shared a series of photos from which can make anyone go weak in the knees. Ranveer also got awestruck after seeing the photos.DP looked absolutely stunning in a pink dress with a ruffled neck and Ranveer couldn't stop himself from commenting on the posts shared by the actress.\\n\\nAt the award function Deepika's father Prakash Padukone received Lifetime Achievement Award for his contribution in sports. Ranveer also attended the event to witness the moment.On the work front, Deepika will be next seen in Meghna Gulzar 's 'Chhapaak' while Ranveer's next is Kabir Khan's '83'.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prepare"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## split into sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-11T02:41:58.681614Z",
+     "start_time": "2019-06-11T02:41:58.676650Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def split_to_sentences(article):\n",
+    "    sentences = [re.sub(\"\\\\n\",\"\",i.strip()) for i in article.strip().split(\".\")]\n",
+    "    sentences = [i for i in sentences if len(i)>0]\n",
+    "    return sentences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## pad/truncate to same length"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-10T08:55:05.503848Z",
-     "start_time": "2019-06-10T08:55:05.492227Z"
+     "end_time": "2019-06-11T02:41:59.458146Z",
+     "start_time": "2019-06-11T02:41:59.453900Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Get News Updates directly on your WhatsApp',\n",
-       " 'Click here to Subscribe',\n",
-       " 'Ranveer Singh and Deepika Padukone have been giving us major couple goals',\n",
-       " 'And today, Deepika took to her Instagram to share her look for an award night',\n",
-       " 'She shared a series of photos from which can make anyone go weak in the knees',\n",
-       " 'Ranveer also got awestruck after seeing the photos',\n",
-       " \"DP looked absolutely stunning in a pink dress with a ruffled neck and Ranveer couldn't stop himself from commenting on the posts shared by the actress\",\n",
-       " \"At the award function Deepika's father Prakash Padukone received Lifetime Achievement Award for his contribution in sports\",\n",
-       " 'Ranveer also attended the event to witness the moment',\n",
-       " \"On the work front, Deepika will be next seen in Meghna Gulzar 's 'Chhapaak' while Ranveer's next is Kabir Khan's '83'\"]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "article = \"\"\"Get News Updates directly on your WhatsApp. Click here to Subscribe.\\n\\nRanveer Singh and Deepika Padukone have been giving us major couple goals. And today, Deepika took to her Instagram to share her look for an award night.\\n\\n\\n\\n\\n\\nShe shared a series of photos from which can make anyone go weak in the knees. Ranveer also got awestruck after seeing the photos.DP looked absolutely stunning in a pink dress with a ruffled neck and Ranveer couldn't stop himself from commenting on the posts shared by the actress.\\n\\nAt the award function Deepika's father Prakash Padukone received Lifetime Achievement Award for his contribution in sports. Ranveer also attended the event to witness the moment.On the work front, Deepika will be next seen in Meghna Gulzar 's 'Chhapaak' while Ranveer's next is Kabir Khan's '83'.\"\"\"\n",
-    "sentences = [re.sub(\"\\\\n\",\"\",i.strip()) for i in article.strip().split(\".\")]\n",
-    "sentences = [i for i in sentences if len(i)>0]\n",
-    "sentences"
+    "def align(sentence_list, pad_len=13):\n",
+    "    sentences_pad = [\" \".join(ExqUtils.padding(sen.split(\" \"),pad_len)) for sen in sentence_list]\n",
+    "    return sentences_pad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-10T10:37:12.222971Z",
-     "start_time": "2019-06-10T10:37:12.215577Z"
+     "end_time": "2019-06-11T02:41:59.855237Z",
+     "start_time": "2019-06-11T02:41:59.851277Z"
     }
+   },
+   "outputs": [],
+   "source": [
+    "padded_sens = align(split_to_sentences(article),pad_len=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-11T02:50:03.790496Z",
+     "start_time": "2019-06-11T02:50:03.782661Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|2019-06-11 10:50:03| 句子: 10, 词(each sentences): 30\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['Modi was appointed Chief Minister of Gujarat in 2001 __PAD__ __PAD__ __PAD__ __PAD__',\n",
-       " 'Narendra Modi was appointed Chief Minister of Gujarat in 2001 __PAD__ __PAD__ __PAD__',\n",
-       " 'Obama was appointed Chief Minister of Gujarat in 2001 __PAD__ __PAD__ __PAD__ __PAD__']"
+       "['Get News Updates directly on your WhatsApp __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__',\n",
+       " 'Click here to Subscribe __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__',\n",
+       " 'Ranveer Singh and Deepika Padukone have been giving us major couple goals __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__',\n",
+       " 'And today, Deepika took to her Instagram to share her look for an award night __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__',\n",
+       " 'She shared a series of photos from which can make anyone go weak in the knees __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__',\n",
+       " 'Ranveer also got awestruck after seeing the photos __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__',\n",
+       " \"DP looked absolutely stunning in a pink dress with a ruffled neck and Ranveer couldn't stop himself from commenting on the posts shared by the actress __PAD__ __PAD__ __PAD__ __PAD__\",\n",
+       " \"At the award function Deepika's father Prakash Padukone received Lifetime Achievement Award for his contribution in sports __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__\",\n",
+       " 'Ranveer also attended the event to witness the moment __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__',\n",
+       " \"On the work front, Deepika will be next seen in Meghna Gulzar 's 'Chhapaak' while Ranveer's next is Kabir Khan's '83' __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__ __PAD__\"]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pad_len = 13\n",
-    "demoSentence_total = [\"Modi was appointed Chief Minister of Gujarat in 2001\",\n",
-    "                      \"Narendra Modi was appointed Chief Minister of Gujarat in 2001\",\n",
-    "                      \"Obama was appointed Chief Minister of Gujarat in 2001\"]\n",
-    "demoSentence_total = [\" \".join(ExqUtils.padding(sen.split(\" \"),pad_len)) for sen in demoSentence_total]\n",
-    "demoSentence_total"
+    "ExqUtils.zprint(f\"\"\"句子: {len(padded_sens)}, 词(each sentences): {len(padded_sens[0].split(\" \"))}\"\"\")\n",
+    "padded_sens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TF | Graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-11T02:50:55.603550Z",
+     "start_time": "2019-06-11T02:50:53.159532Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0611 10:50:54.253428 140223109015360 tf_logging.py:115] Saver not created because there are no variables in the graph to restore\n"
+     ]
+    }
+   ],
+   "source": [
+    "g0 = tf.get_default_graph()\n",
+    "with g0.as_default():\n",
+    "    emb_opt = elmo(inputs=padded_sens, as_dict=True)\n",
+    "    word_emb = emb_opt['word_emb']\n",
+    "    LM_emb = tf.concat([emb_opt['lstm_outputs1'], emb_opt['lstm_outputs2']],axis=2)\n",
+    "    with tf.Session() as sess:\n",
+    "        sess.run(tf.global_variables_initializer())\n",
+    "        emb_res = sess.run(emb_opt)\n",
+    "        LM_emb_res = sess.run(LM_emb)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-11T02:50:55.727164Z",
+     "start_time": "2019-06-11T02:50:55.719850Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 30, 1024)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(10, 30, 1024)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(10, 30, 2048)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emb_res['lstm_outputs1'].shape\n",
+    "emb_res['lstm_outputs2'].shape\n",
+    "LM_emb_res.shape # 10个句子，每个句子30个词，每个词1024维向量"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-10T09:36:03.821970Z",
@@ -143,36 +293,7 @@
     "code_folding": [],
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0610 17:35:54.984682 139927025489728 tf_logging.py:115] Saver not created because there are no variables in the graph to restore\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0610 17:35:59.533390 139927025489728 tf_logging.py:115] Saver not created because there are no variables in the graph to restore\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tf.Session() as sess:\n",
     "    emb_opt = elmo(inputs=sentences, as_dict=True)\n",
@@ -184,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-10T09:06:41.881702Z",
@@ -207,32 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-10T09:05:14.578694Z",
      "start_time": "2019-06-10T09:05:14.572453Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[26, 26, 26, 26, 26, 26, 26, 26, 26, 26]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[len(i) for i in emb_sentence]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-10T08:36:33.399338Z",
@@ -244,25 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-10T09:05:10.119019Z",
      "start_time": "2019-06-10T09:05:10.112893Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[12, 123, 14, '__PAD__', '__PAD__']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ExqUtils.padding([12,123,14],5)"
    ]
@@ -304,7 +403,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
