--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -1227,7 +1227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 方案一 | dynamic_rnn\n",
+    "#### ~~方案一 | dynamic_rnn~~\n",
     "time_major的含义\n",
     "- time_major参数针对不同的inputs格式选取不同的值\n",
     "- `inputs` 为 `(batches, steps, inputs)` ==> `time_major=False`\n",
@@ -1435,6 +1435,74 @@
     "# 计算测试数据的准确率\n",
     "feed_dict = {_X: mnist.test.images, y: mnist.test.labels, keep_prob: 1.0, batch_size:mnist.test.images.shape[0]}\n",
     "print (f\"test accuracy {sess.run(accuracy, feed_dict=feed_dict)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 可视化验证每行输入会如何"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "print(mnist.train.labels[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X3 = mnist.train.images[4]\n",
+    "img3 = X3.reshape([28, 28])\n",
+    "plt.imshow(img3, cmap='gray')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X3.shape = [-1, 784]\n",
+    "y_batch = mnist.train.labels[0]\n",
+    "y_batch.shape = [-1, class_num]\n",
+    "\n",
+    "X3_outputs = np.array(sess.run(outputs, feed_dict={\n",
+    "            _X: X3, y: y_batch, keep_prob: 1.0, batch_size: 1}))\n",
+    "print X3_outputs.shape\n",
+    "X3_outputs.shape = [28, hidden_size]\n",
+    "print X3_outputs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_W = sess.run(W, feed_dict={\n",
+    "            _X:X3, y: y_batch, keep_prob: 1.0, batch_size: 1})\n",
+    "h_bias = sess.run(bias, feed_dict={\n",
+    "            _X:X3, y: y_batch, keep_prob: 1.0, batch_size: 1})\n",
+    "h_bias.shape = [-1, 10]\n",
+    "\n",
+    "bar_index = range(class_num)\n",
+    "for i in xrange(X3_outputs.shape[0]):\n",
+    "    plt.subplot(7, 4, i+1)\n",
+    "    X3_h_shate = X3_outputs[i, :].reshape([-1, hidden_size])\n",
+    "    pro = sess.run(tf.nn.softmax(tf.matmul(X3_h_shate, h_W) + h_bias))\n",
+    "    plt.bar(bar_index, pro[0], width=0.2 , align='center')\n",
+    "    plt.axis('off')\n",
+    "plt.show()"
    ]
   },
   {
