--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -69,7 +69,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Morvan | Tensorflow"
+    "# Morvan | Tensorflow\n",
+    "- [莫烦 RNN on Tensorflow](https://morvanzhou.github.io/tutorials/machine-learning/tensorflow/5-08-RNN2/#%E5%AE%9A%E4%B9%89-RNN-%E7%9A%84%E4%B8%BB%E4%BD%93%E7%BB%93%E6%9E%84)"
    ]
   },
   {
@@ -1386,7 +1387,7 @@
      "end_time": "2019-06-13T11:06:36.445282Z",
      "start_time": "2019-06-13T11:02:57.880486Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
