--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -659,7 +659,8 @@
     "ExecuteTime": {
      "end_time": "2019-06-05T07:27:25.960358Z",
      "start_time": "2019-06-05T07:27:01.071812Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -705,6 +706,13 @@
     "            pred_y = torch.max(test_output, 1)[1].data.numpy()\n",
     "            accuracy = float((pred_y == test_y).astype(int).sum()) / float(test_y.size)\n",
     "            print('Epoch: ', epoch, '| train loss: %.4f' % loss.data.numpy(), '| test accuracy: %.2f' % accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict"
    ]
   },
   {
@@ -1718,6 +1726,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-12T10:07:37.621348Z",
+     "start_time": "2019-07-12T10:07:37.452020Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1912,76 +1937,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T09:49:40.734342Z",
-     "start_time": "2019-06-13T09:49:40.559308Z"
+     "end_time": "2019-07-17T12:16:59.148829Z",
+     "start_time": "2019-07-17T12:16:59.052478Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[8, 2, 5],\n",
-       "       [8, 6, 8]])"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(2, 3)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "37"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([8, 4, 6])"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-1bbe52383df7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\"a\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0ma_var\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0ma_var\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
     }
    ],
    "source": [
     "np.random.seed(2019)\n",
     "a = np.random.randint(0,10,size=[2,3])\n",
-    "# a = tf.Variable(a)\n",
-    "a\n",
+    "\"a\",a\n",
+    "a_var = tf.Variable(a)\n",
+    "a_var.shape\n",
     "a.shape\n",
+    "tf.reduce_mean(a,axis=None).shape\n",
+    "tf.reduce_mean(a,axis=0).shape\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.reduce_sum(a,axis=None))\n",
     "    sess.run(tf.reduce_mean(a,axis=None))\n",
-    "    sess.run(tf.reduce_mean(a,axis=0))"
+    "    sess.run(tf.reduce_mean(a,axis=None)).shape\n",
+    "    sess.run(tf.reduce_mean(a,axis=0))\n",
+    "    sess.run(tf.reduce_mean(a,axis=0)).shape"
    ]
   },
   {
