--- a/TensorFlowManual.ipynb
+++ b/TensorFlowManual.ipynb
@@ -1082,7 +1082,7 @@
     ">    - [**filter_height** * **filter_width** * **in_channels**, `output_channels`].\n",
     ">- Extracts image patches from the input tensor to form a virtual tensor of shape:\n",
     ">    - [`batch`, out_height, out_width, **filter_height** * **filter_width** * **in_channels**].\n",
-    ">- For each patch, right-multiplies the filter matrix and the image patch vector."
+    ">- For each patch, right-multiplies the filter matrix and the image patch vector.\n"
    ]
   },
   {
