--- a/parse_train_data.ipynb
+++ b/parse_train_data.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "涂博的人脸样本数据，根据对应的json文件获得各种属性的分类样本"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Prepare"
    ]
   },
