--- a/TextGenerate.ipynb
+++ b/TextGenerate.ipynb
@@ -1488,10 +1488,7 @@
      "end_time": "2019-10-21T12:03:05.566569Z",
      "start_time": "2019-10-21T12:03:05.558599Z"
     },
-    "code_folding": [
-     0,
-     18
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -1506,7 +1503,7 @@
     "    preds = preds_.copy()  # 避免改变原preds\n",
     "    p = np.squeeze(preds)\n",
     "    # 将除了top_n个预测值的位置都置为0\n",
-    "    p[np.argsort(p)[:-top_n]] = 0\n",
+    "    p[np.argsort(p)[-top_n:]] = 0\n",
     "    # 归一化概率\n",
     "    p = p / np.sum(p)\n",
     "    # 随机选取一个字符 / 或者取概率最大的字符\n",
@@ -1575,7 +1572,7 @@
      "end_time": "2019-10-22T02:12:41.986369Z",
      "start_time": "2019-10-22T02:12:41.902747Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1651,6 +1648,9 @@
      "end_time": "2019-10-16T09:38:08.801334Z",
      "start_time": "2019-10-16T09:38:08.793462Z"
     },
+    "code_folding": [
+     0
+    ],
     "scrolled": true
    },
    "outputs": [],
@@ -1715,7 +1715,7 @@
      "start_time": "2019-10-17T04:29:26.787047Z"
     },
     "code_folding": [
-     39
+     9
     ],
     "scrolled": false
    },
