--- a/TensorFlowManual.ipynb
+++ b/TensorFlowManual.ipynb
@@ -2554,6 +2554,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### tf.GradientTape()\n",
+    "**可训练的不用管，直接被watch了；其他的可以手动watch一下**\n",
+    "> Trainable variables (created by tf.Variable or tf.compat.v1.get_variable, where trainable=True is default in both cases) are automatically watched. Tensors can be manually watched by invoking the watch method on this context manager.\n",
+    "\n",
+    "\n",
+    "直接计算梯度\n",
+    "```python\n",
+    "x = tf.constant(3.0)\n",
+    "with tf.GradientTape() as g:\n",
+    "    g.watch(x)\n",
+    "    y = x * x\n",
+    "dy_dx = g.gradient(y, x) # Will compute to 6.0\n",
+    "```\n",
+    "\n",
+    "求高阶导\n",
+    "```python\n",
+    "x = tf.constant(3.0)\n",
+    "with tf.GradientTape() as g:\n",
+    "    with tf.GradientTape() as gg:\n",
+    "        gg.watch(x)\n",
+    "        y = x * x\n",
+    "    dy_dx = gg.gradient(y, x)   # 对x求一阶导 Will compute to 6.0\n",
+    "d2y_dx2 = g.gradient(dy_dx, x)  # 对x求二阶导 Will compute to 2.0\n",
+    "```\n",
+    "\n",
+    "如果在`with`之后会用到多次`g`，需要在`with`初始化时指定`persistent=True`，后面可以`del g`手动清除\n",
+    "```python\n",
+    "x = tf.constant(3.0)\n",
+    "with tf.GradientTape(persistent=True) as g:\n",
+    "    g.watch(x)\n",
+    "    y = x * x\n",
+    "    z = y * y\n",
+    "dz_dx = g.gradient(z, x)  # 108.0 (4*x^3 at x = 3)\n",
+    "dy_dx = g.gradient(y, x)  # 6.0\n",
+    "del g  # Drop the reference to the tape\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### opt -> opt.compute -> opt.apply\n",
     "```python\n",
     "_optimizer = tf.train.AdamOptimizer(learning_rate=self.learning_rate, beta1=0.9, beta2=0.999,epsilon=1e-8)\n",
