not sure what i'm doing..

--- a/TFKerasBook-NLG.ipynb
+++ b/TFKerasBook-NLG.ipynb
@@ -1388,11 +1388,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "计算乘法"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vocab_size = len(vocab)\n",
+    "embedding_dim = 256\n",
+    "rnn_units = 1024\n",
+    "def build_model(vocab_size, embedding_dim, rnn_units, batch_size):\n",
+    "    model = tf.keras.Sequential([\n",
+    "        tf.keras.layers.Embedding(vocab_size, embedding_dim, batch_input_shape=[batch_size, None]),\n",
+    "        tf.keras.layers.GRU(rnn_units,\n",
+    "                            return_sequences=True,\n",
+    "                            stateful=True,\n",
+    "                            recurrent_initializer='glorot_uniform'),\n",
+    "        tf.keras.layers.Dense(vocab_size)\n",
+    "      ])\n",
+    "    return model"
+   ]
   },
   {
    "cell_type": "code",
@@ -1425,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
