--- a/TensorFlowManual.ipynb
+++ b/TensorFlowManual.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-22T03:44:00.617924Z",
-     "start_time": "2019-11-22T03:44:00.275030Z"
+     "end_time": "2019-12-31T03:15:38.291261Z",
+     "start_time": "2019-12-31T03:15:38.003460Z"
     }
    },
    "outputs": [],
@@ -1161,6 +1161,139 @@
     "with tf.Session() as sess:\n",
     "    sess.run(inpTS, feed_dict={inpTS:[1,2,3]})\n",
     "    sess.run(inpTS, feed_dict={inpTS:[1,2,3,4,5,6]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tf.einsum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-31T03:26:44.793246Z",
+     "start_time": "2019-12-31T03:26:44.758096Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'img1.shape:(3, 3, 3), img2.shape:(3, 3, 3)'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'a.shape:(1, 3, 3, 3), b.shape: (1, 3, 3, 3)'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'res.shape:(1, 3, 3)'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 18,  27,  42],\n",
+       "        [ 30,  45,  72],\n",
+       "        [ 42,  63, 102]]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 1],\n",
+       "       [1, 2, 1],\n",
+       "       [1, 2, 1]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 1],\n",
+       "       [1, 2, 1],\n",
+       "       [1, 2, 1]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img1 = np.array([[[1,2,3], [2,3,4], [1,2,3]],\n",
+    "                 [[1,2,3], [2,3,4], [1,2,3]],\n",
+    "                 [[1,2,3], [2,3,4], [1,2,3]],])\n",
+    "\n",
+    "img2 = np.array([[[1,1,3], [2,3,4], [1,2,3]],\n",
+    "                 [[1,1,3], [2,3,4], [1,2,3]],\n",
+    "                 [[1,1,3], [2,3,4], [1,2,3]],])\n",
+    "\n",
+    "# img1=np.random.random((4,3,3))\n",
+    "# img2=np.random.random((4,3,3))\n",
+    "f\"img1.shape:{img1.shape}, img2.shape:{img2.shape}\"\n",
+    "a = np.expand_dims(img1,axis=0)\n",
+    "b = np.expand_dims(img2,axis=0)\n",
+    "f\"a.shape:{a.shape}, b.shape: {b.shape}\"\n",
+    "\n",
+    "res = np.einsum('ijkm,ijkn->imn',a,b)\n",
+    "f\"res.shape:{res.shape}\"\n",
+    "res\n",
+    "\n",
+    "a[0,:,:,0]\n",
+    "b[0,:,:,0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Matrix multiplication\n",
+    ">>> einsum('ij,jk->ik', m0, m1)  # output[i,k] = sum_j m0[i,j] * m1[j, k]\n",
+    "\n",
+    "# Dot product\n",
+    ">>> einsum('i,i->', u, v)  # output = sum_i u[i]*v[i]\n",
+    "\n",
+    "# Outer product\n",
+    ">>> einsum('i,j->ij', u, v)  # output[i,j] = u[i]*v[j]\n",
+    "\n",
+    "# Transpose\n",
+    ">>> einsum('ij->ji', m)  # output[j,i] = m[i,j]\n",
+    "\n",
+    "# Trace\n",
+    ">>> einsum('ii', m)  # output[j,i] = trace(m) = sum_i m[i, i]\n",
+    "\n",
+    "# Batch matrix multiplication\n",
+    ">>> einsum('aij,ajk->aik', s, t)  # out[a,i,k] = sum_j s[a,i,j] * t[a, j, k]"
    ]
   },
   {
@@ -5365,7 +5498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
